# ontology-agent

./: .gitignore  CLAUDE.md  README.md  design.pen  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  verify_cmc_extraction.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_ontology_meta.py  0002_extraction_realtime.py  0003_workflow_statemachine.py  0004_declarative_rule_layer.py  0005_add_ner_columns.py  0006_system_config_and_doc_path.py  0007_add_generated_reports.py  0008_add_slot_dismissals.py  0009_add_ast_templates.py  0010_report_async_status.py  0011_ast_template_sample_text.py  0012_ast_template_sample_json.py
backend/app/: config.py  db.py  dependencies.py  main.py
backend/app/api/: actions.py  ast_templates.py  compliance.py  entities.py  extraction.py  integration.py  kg.py  ontology.py  reasoning.py  reports.py  system_config.py
backend/app/models/: __init__.py  entity_shadow.py  extraction.py  integration.py  ontology_meta.py  reasoning.py  system_config.py  types.py
backend/app/schemas/: entity.py  extraction.py  integration.py  ontology.py  reasoning.py  reporting.py
backend/app/services/: audit.py  kg_store.py  ontology_engine.py  ontology_meta_store.py  ttl_merge.py
backend/app/services/extraction/: aligner.py  db_reader.py  document_annotator.py  document_classifier.py  docx_structure.py  gliner_extractor.py  llm_extractor.py  llm_gap_filler.py  (+9 more)
backend/scripts/: fetch_models.sh  verify_sentence_topic_shift.py
backend/tests/: conftest.py  test_relation_schema.py
backend/tests/test_api/: test_action_engine.py  test_aligner_semantic.py  test_alignment_review.py  test_aps_connector.py  test_assess_bootstrap.py  test_audit_chain_workflow.py  test_auto_recompute.py  test_compliance.py  test_criteria_edit_changes_inference.py  test_dashboard.py  test_entity_detail.py  test_extraction_pipeline.py  test_fact_materialization.py  test_incremental_reasoning.py  test_lifecycle_machine.py  test_migration_backfill.py  test_ontology_class.py  test_ontology_properties.py  test_ontology_release.py  test_ontology_restriction_mapping.py  test_ontology_tbox.py  test_qa_gate.py  test_qa_reject.py  test_quickstart_e2e.py  test_rbac_guard.py  test_risk_report.py  test_risk_report_coverage.py  test_rule_artifacts_contract.py  test_rule_audit_trail.py
backend/tests/test_extraction/: __init__.py  test_doc_repo_pipeline.py  test_doc_repo_review_gate.py  test_doc_repo_trigger.py  test_document_annotator.py  test_excel_enrichment.py  test_excel_enrichment_pipeline.py  test_extracted_from.py  test_gliner_extractor.py  test_ner_degradation.py  test_offline_invariants.py  test_offline_pipeline.py  test_ontology_typer.py  test_parse_word_mapping.py  test_provenance_resolve.py  test_relation_extraction.py  test_relevance_gate.py  test_schema_derivation.py  test_sentence_grouping.py  test_slot_suggester.py  test_word_formatting.py  test_word_prose.py
backend/tests/test_integration/: __init__.py  test_affected_subgraph_document.py  test_connector_factory.py  test_detect_module_document.py  test_doc_repo_connector.py  test_doc_repo_credentials.py  test_doc_repo_http.py  test_document_lifecycle.py  test_document_tbox_merge.py  test_phase_filter.py  test_phase_vocabulary.py  test_record_audit.py  test_record_idempotency.py  test_record_materialization.py  test_tbox_boundary.py  test_zero_regression.py
backend/tests/test_reasoning/: matrix.py  test_conflict_policy.py  test_criteria_projection.py  test_derivation.py  test_inferable_gap.py  test_interpreter.py  test_owa_unknown.py  test_parity_classification.py  test_parity_golden_master.py  test_penicillin_dedication.py  test_phase_not_in_rule_antecedent.py  test_phase_provenance_context.py  test_provenance.py  test_ttl_roundtrip.py
backend/tests/test_reporting/: test_ast_coverage_api.py  test_ast_template.py  test_ast_template_disabled.py  test_coverage_validator.py  test_docx_llm_annotation.py  test_fact_bridge.py  test_llm_gap_filler.py  test_multi_template_e2e.py  test_narrative_generator.py  test_report_llm_merge.py  test_risk_report_api.py  test_risk_report_generator.py  test_suggest_slots_api.py  test_template_expander.py
(+289 files in other folders)
