[project]
name = "slpra-platform"
version = "0.1.0"
description = "Clinical Drug Intelligent Assisted Production Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "owlready2>=0.46",
    "rdflib>=7.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "anthropic>=0.30",
    "httpx>=0.27",
]

# This is an application, not a library. No [build-system] is declared, so uv
# treats it as a non-packaged ("virtual") project: `uv sync` installs only the
# dependencies into .venv and the app runs from source (uvicorn app.main:app).

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
